tests/machine/x/ocaml/map_membership.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_membership.ml", line 24, characters 36-37:
24 |   print_endline (List.mem_assoc "a" m);
                                         ^
Error: This expression has type record1
       but an expression was expected of type (string * 'a) list


Context (around line 24):
  22 | 
  23 | let () =
  24 |   print_endline (List.mem_assoc "a" m);
  25 |   print_endline (List.mem_assoc "c" m);
  26 | 
